# womir

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO-optimizations.txt  allocation-visualizer-v2.html  allocation-visualizer.html  grid-input.txt  index.html  keeper_allocate.wasm  keeper_donothing.wasm  keeper_printsomething.wasm
.github/workflows/: pr.yml
sample-programs/: add.wat  collatz.wasm  fib_loop.wat  merkle-tree.wasm  reth-guest.wasm
sample-programs/keccak/: Cargo.toml
sample-programs/keccak/src/: main.rs
sample-programs/keccak_with_inputs/: Cargo.toml
sample-programs/keccak_with_inputs/src/: main.rs
sample-programs/sqrt/: Cargo.toml
sample-programs/sqrt/src/: main.rs
sample-programs/vec_grow/: Cargo.toml
sample-programs/vec_grow/src/: lib.rs
sample-programs/vec_median/: Cargo.toml
sample-programs/vec_median/src/: lib.rs  main.rs
src/: generic_ir.rs  interpreter.rs  lib.rs  linker.rs  main.rs  petravm.rs  transpiler.rs
src/interpreter/: generic_ir.rs  linker.rs  mod.rs
src/interpreter/wom/: mod.rs
src/loader/: allocate_locals.rs  allocate_registers.rs  block_tree.rs  blockless_dag.rs  dag.rs  dumb_jump_removal.rs  liveness_dag.rs  locals_data_flow.rs  mod.rs  settings.rs
src/loader/dag/: const_collapse.rs  mod.rs  (+2 more)
src/utils/: mod.rs  offset_map.rs  range_consolidation.rs  rev_vec_filler.rs  tree.rs
src/wom_interpreter/: generic_ir.rs  mod.rs
tests/: collatz.wat
wasm_testsuite/: README.md  align.wast  call.wast  call_indirect.wast  conversions.wast  if.wast  local_get.wast  local_set.wast  local_tee.wast  stack.wast
(+54 files in other folders)
