[package]
name = "zkwasm"
description = "ZK friendly WebAssembly frontend"
edition = "2024"

[dependencies]
env_logger = "0.10.0"
itertools = "0.13"
log = "0.4.17"
wasmparser = "0.227"
derive-where = "1.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"

[dev-dependencies]
test-log = "0.2.17"
